# lemon-squeeze

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: b2f1a7c4d5e8_add_evaluation_rubric_hash.py  dd2bf37a86ee_initial_schema.py
benchmarks/starter/prompts/: coding.jsonl  (+6 more)
examples/: TUTORIAL.md  library_demo.py
examples/scripts/: refusal_analysis.py
rubrics/: bullet_list_summary.yaml  concise.yaml  contains_python_block.yaml  factual_quality.yaml  helpful_summary.yaml  no_refusal.yaml  per_prompt_expected.yaml  response_is_valid_json.yaml
src/lemon_squeeze/: __init__.py  aggregations.py  bench.py  cache.py  cli.py  compare.py  config.py  dashboard.py  demo.py  doctor.py  portable.py  providers.py  report.py  router.py  server.py  stats.py  utils.py
tests/: conftest.py  test_aggregations.py  test_ai_harness_importer.py  test_alembic_migration.py  test_auto_classify_and_backfill.py  test_bench.py  test_cache.py  test_chat_client.py  test_classification_pipeline.py  test_classify_ask_cli.py  test_cli_smoke.py  test_compare.py  test_db_init_stamp.py  test_demo.py  test_doctor.py  test_doctor_edge_cases.py  test_eval_replay.py  test_expected_contains_judge.py  test_freshness_and_cost.py  test_grok_ingester.py  test_heuristics.py  test_ingest_dry_run.py  test_ingestion.py  test_judge_cli.py  test_judges.py  test_llm_classifier.py  test_llm_judge.py  test_lm_studio_ingester.py  test_metrics_endpoint.py  test_ml_classifier.py  test_new_rubrics.py  test_openrouter_ingester.py  test_parallel_fanout.py  test_portable.py  test_providers.py  test_public_api.py  test_py_typed_marker.py  test_report.py  test_report_serialization.py  test_router.py  (+7 more)
(+30 files in other folders)
