[project]
name = "lemon-squeeze"
version = "0.2.5"
description = "Model performance harness for benchmarking local & remote LLMs across prompt types."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tory" }]
license = { text = "MIT" }

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
dashboard = [
    "streamlit>=1.33",
    "pandas>=2.2",
    "altair>=5.3",
]
server = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
lemon = "lemon_squeeze.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemon_squeeze"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/lemon_squeeze"]
omit = [
    # Streamlit/FastAPI surfaces — covered by smoke tests, but their `if __name__`
    # blocks and event-loop entry points show as misses under coverage.
    "src/lemon_squeeze/dashboard.py",
]

[tool.coverage.report]
precision = 1
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
